@@ -68,7 +68,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RunWith(MockitoJUnitRunner.class)
 public class MemoryPublisherTest {
@@ -187,10 +186,8 @@ public class MemoryPublisherTest {
 
         assertThat(mPublisher.hasDataSubscriber(mMockDataSubscriber)).isTrue();
         verify(mMockDataSubscriber).push(mBundleCaptor.capture(), anyBoolean());
-        assertThat(mBundleCaptor.getValue().keySet().stream().collect(Collectors.toList()))
-                .containsExactly(
-                        Constants.MEMORY_BUNDLE_KEY_MEMINFO,
-                        Constants.MEMORY_BUNDLE_KEY_TIMESTAMP);
+        assertThat(mBundleCaptor.getValue().keySet().stream().toList()).containsExactly(
+                Constants.MEMORY_BUNDLE_KEY_MEMINFO, Constants.MEMORY_BUNDLE_KEY_TIMESTAMP);
         assertThat(mBundleCaptor.getValue().getString(Constants.MEMORY_BUNDLE_KEY_MEMINFO))
                 .isEqualTo(FAKE_MEMINFO);
     }
@@ -209,13 +206,13 @@ public class MemoryPublisherTest {
         assertThat(mPublisher.hasDataSubscriber(dataSubscriber)).isTrue();
         verify(dataSubscriber).push(mBundleCaptor.capture(), anyBoolean());
         PersistableBundle bundle = mBundleCaptor.getValue();
-        assertThat(bundle.keySet().stream().collect(Collectors.toList())).containsExactly(
+        assertThat(bundle.keySet().stream().toList()).containsExactly(
                 Constants.MEMORY_BUNDLE_KEY_MEMINFO,
                 Constants.MEMORY_BUNDLE_KEY_TIMESTAMP,
                 "com.android.car:0:com.android.car");
         PersistableBundle processBundle = bundle.getPersistableBundle(
                 "com.android.car:0:com.android.car");
-        assertThat(processBundle.keySet().stream().collect(Collectors.toList())).containsExactly(
+        assertThat(processBundle.keySet().stream().toList()).containsExactly(
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SWAPPABLE_PSS,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_PRIVATE_DIRTY,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SHARED_DIRTY,
@@ -255,7 +252,7 @@ public class MemoryPublisherTest {
         assertThat(mPublisher.hasDataSubscriber(dataSubscriber)).isTrue();
         verify(dataSubscriber).push(mBundleCaptor.capture(), anyBoolean());
         PersistableBundle bundle = mBundleCaptor.getValue();
-        assertThat(bundle.keySet().stream().collect(Collectors.toList())).containsExactly(
+        assertThat(bundle.keySet().stream().toList()).containsExactly(
                 Constants.MEMORY_BUNDLE_KEY_MEMINFO,
                 Constants.MEMORY_BUNDLE_KEY_TIMESTAMP,
                 "com.android.car:12345:com.android.car",
@@ -264,7 +261,7 @@ public class MemoryPublisherTest {
                 "com.android.car:12345:com.android.car");
         PersistableBundle processBundle2 = bundle.getPersistableBundle(
                 "com.android.car:67890:com.android.car");
-        assertThat(processBundle1.keySet().stream().collect(Collectors.toList())).containsExactly(
+        assertThat(processBundle1.keySet().stream().toList()).containsExactly(
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SWAPPABLE_PSS,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_PRIVATE_DIRTY,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SHARED_DIRTY,
@@ -279,7 +276,7 @@ public class MemoryPublisherTest {
                 "mem.summary.code",
                 "mem.summary.graphics",
                 "mem.summary.total-swap");
-        assertThat(processBundle2.keySet().stream().collect(Collectors.toList())).containsExactly(
+        assertThat(processBundle2.keySet().stream().toList()).containsExactly(
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SWAPPABLE_PSS,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_PRIVATE_DIRTY,
                 Constants.MEMORY_BUNDLE_KEY_TOTAL_SHARED_DIRTY,
@@ -310,10 +307,8 @@ public class MemoryPublisherTest {
 
         assertThat(mPublisher.hasDataSubscriber(dataSubscriber)).isTrue();
         verify(dataSubscriber).push(mBundleCaptor.capture(), anyBoolean());
-        assertThat(mBundleCaptor.getValue().keySet().stream().collect(Collectors.toList()))
-                .containsExactly(
-                        Constants.MEMORY_BUNDLE_KEY_MEMINFO,
-                        Constants.MEMORY_BUNDLE_KEY_TIMESTAMP);
+        assertThat(mBundleCaptor.getValue().keySet().stream().toList()).containsExactly(
+                Constants.MEMORY_BUNDLE_KEY_MEMINFO, Constants.MEMORY_BUNDLE_KEY_TIMESTAMP);
     }
 
     @Test
